<resources>
    <string name="app_name">PHARMRUS Pharmacy</string>
    <string name="pharmacy_phone">+79670526466</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="available_on_stock">Available on stock</string>
    <string name="yes">Yes</string>
    <string name="no">Order</string>
    <string name="price">Price</string>
    <string name="price_with_total">Price (one/total)</string>
    <string name="total_price">Total price</string>
    <string name="currency">₽</string>
    <string name="search_hint">Type drug for search</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_search">SearchActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_shipment">ShipmentActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_text_1">Order</string>
    <string name="tab_text_2">Additional Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shipment_title">Shipment</string>
    <string name="user_name">User name *</string>
    <string name="user_phone">User phone *</string>
    <string name="user_mail">User mail</string>
    <string name="user_info">User information</string>
    <string name="pickup">Pickup from pharmacy: Reutov, Komsomolskaya st 10</string>
    <string name="delivery">Delivery to</string>
    <string name="cart_send">Send Order</string>
    <string name="additional_info">Additional information about delivery and someone else</string>
    <string name="sending">Sending...</string>
    <string name="sent">Sent</string>

    <!-- Errors -->
    <string name="user_name_error">Name should be filled</string>
    <string name="user_phone_error">Phone should be filled properly</string>
    <string name="order_num">Order No</string>
    <string name="order_comment">Order comments</string>
</resources>
