<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:columnCount="2"
    android:stretchMode="columnWidth"
    tools:context=".shipment.ShipmentActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/shipmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_weight="1"
        android:text="@string/user_info"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_marginLeft="5dp"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="5dp"
        android:layout_row="2"
        android:text="@string/user_phone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_marginLeft="5dp"
        android:text="@string/user_mail" />

    <EditText
        android:id="@+id/userMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:ems="10"
        android:layout_gravity="fill"
        android:layout_marginRight="5dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:layout_marginRight="5dp"
        android:layout_gravity="fill"
        android:inputType="phone" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_marginRight="5dp"
        android:layout_row="1"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4"
        android:text="@string/shipment_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="5" >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/pickup" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:enabled="false"
            android:text="@string/delivery" />
    </RadioGroup>

    <Button
        android:id="@+id/sendOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="7"
        android:layout_marginLeft="5dp"
        android:enabled="false"
        android:text="@string/cart_send" />

    <TextView
        android:id="@+id/orderNoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="8"
        android:layout_marginLeft="5dp"
        android:text="@string/order_num"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/orderNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="8"
        android:text="TextView"
        android:layout_marginRight="5dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_marginLeft="5dp"
        android:text="@string/order_comment" />

    <EditText
        android:id="@+id/orderComment"
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_marginRight="5dp"
        android:layout_row="6"
        android:ems="10"
        android:inputType="textMultiLine" />


</GridLayout>